desktop nav links! fixed font flicker!

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,10 +6,6 @@ nav {
     background-color: #501313
 }
 
-#topnav {
-    margin-bottom: 10px;
-}
-
 a {
     text-align: center;
 }
@@ -29,6 +25,7 @@ body {
 
 main {
     flex: 1 0 auto;
+    margin-top: 10px;
 }
 
 .container {
@@ -39,14 +36,18 @@ main {
     padding: 0 0 0 20px;
 }
 
-
 h3 {
-    margin: 10px 0 10px 0;
+    margin: 0;
     font-family: 'Bebas Neue', cursive;
 }
 
 h4 {
     margin: 0 0 10px 0;
+    font-family: 'Bebas Neue', cursive;
+}
+
+h5 {
+    margin: 0;
     font-family: 'Bebas Neue', cursive;
 }
 
@@ -96,3 +97,7 @@ img {
     width: 30%;
     height: auto;
   }
+
+  /* .desktopLinks:hover {
+    background-color: gray;
+  } */
